# mparquet

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/mparquet/: builder.py  main.py  meta.py
